@@ -1,0 +1,2 @@
+Executes arbitrary R or C functions some time after the current time,
+after the R execution stack has emptied.
